--- a/client/templates/shared/layout.html
+++ b/client/templates/shared/layout.html
@@ -1,41 +1,40 @@
 <template name="layout">
-  <nav>
-    <div class="nav-wrapper">
-      <a href="/" class="brand-logo">marketcontrol</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/">Procurar</a></li>
-        <li><a href="/add">Adicionar</a></li>
-      </ul>
-    </div>
-  </nav>
+  {{#ionBody}}
+    {{> ionNavBar}}
 
-  <div class="container">
-    {{> Template.dynamic template=main}}
-  </div>
+    <!-- {{#contentFor "headerButtonLeft"}}
+      <button type="button" class="button button-clear side-menu-toggle">
+        Menu
+      </button>
+    {{/contentFor}} -->
 
-  <footer class="page-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">marketcontrol</h5>
-          <p class="grey-text text-lighten-4">Economize colaborativamente.</p>
-        </div>
-        <div class="col l4 offset-l2 s12">
-<!--           <h5 class="white-text">Links</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-          </ul> -->
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      © 2015 Gabriel Rubens
-      <a class="grey-text text-lighten-4 right" href="https://twitter.com/_gabrielrubens">Twitter</a>
-      </div>
-    </div>
-  </footer>
+    {{#ionSideMenuContainer side="left"}}
+      {{#ionSideMenus}}
+        {{#ionSideMenu}}
+          {{#ionList class="has-header"}}
+
+            {{#ionItem href="/"}}
+              Home
+            {{/ionItem}}
+
+            {{#ionItem href="/"}}
+              Pesquisar
+            {{/ionItem}}
+
+            {{#ionItem href="/product/add"}}
+              Novo produto
+            {{/ionItem}}
+
+            {{#ionItem href="/list/add"}}
+              Nova lista de compras
+            {{/ionItem}}
+
+          {{/ionList}}
+        {{/ionSideMenu}}
+      {{/ionSideMenus}}
+      {{#ionSideMenuContent}}
+        {{> yield}}
+      {{/ionSideMenuContent}}
+    {{/ionSideMenuContainer}}
+  {{/ionBody}}
 </template>
