--- a/client/templates/product_add/product_add.html
+++ b/client/templates/product_add/product_add.html
@@ -1,4 +1,11 @@
 <template name="ProductAdd">
-  <h2>Adicionar produto</h2>
-  {{> quickForm id="productAddForm" collection="Products" type="insert"}}
+{{#contentFor "headerTitle"}}
+  <h1 class="title">Adicionar produto</h1>
+{{/contentFor}}
+
+{{#ionView}}
+  {{#ionContent}}
+    {{> quickForm id="productAddForm" collection="Products" type="insert"}}
+  {{/ionContent}}
+{{/ionView}}
 </template>
