Moving Products logic to Package

--- a/client/templates/shared/layout.html
+++ b/client/templates/shared/layout.html
@@ -17,16 +17,28 @@
               Home
             {{/ionItem}}
 
+            {{#ionItem class="item-divider"}}
+              Produtos
+            {{/ionItem}}
+
             {{#ionItem href="/"}}
               Pesquisar
             {{/ionItem}}
 
             {{#ionItem href="/product/add"}}
-              Novo produto
+              Novo
+            {{/ionItem}}
+
+            {{#ionItem class="item-divider"}}
+              Listas
             {{/ionItem}}
 
             {{#ionItem href="/list/add"}}
-              Nova lista de compras
+              Nova
+            {{/ionItem}}
+
+            {{#ionItem href="/lists"}}
+              Ver todas
             {{/ionItem}}
 
           {{/ionList}}
