--- a/packages/products/templates/product_search/product_search.html
+++ b/packages/products/templates/product_search/product_search.html
@@ -1,8 +1,8 @@
 <template name="ProductSearch">
 {{#contentFor "headerButtonRight"}}
-  <button type="button" class="button button-clear">
+  <a href="/product/add" class="button button-clear">
     Novo
-  </button>
+  </a>
 {{/contentFor}}
 
 {{#contentFor "headerTitle"}}
