Subscribe to products

--- a/packages/products/templates/product_edit/product_edit.html
+++ b/packages/products/templates/product_edit/product_edit.html
@@ -5,7 +5,7 @@
 
 {{#ionView}}
   {{#ionContent}}
-    {{> quickForm id="productAddForm" collection="Products" type="edit" doc=product}}
+    {{> quickForm id="productAddForm" collection="Products" type="update" doc=product}}
   {{/ionContent}}
 {{/ionView}}
 </template>
